fix!: completely change database schema for the better